--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
 									</div>
 									<div
 										class="col-xxl-3 col-xl-4 col-lg-6 col-md-4 col-sm-6 pb-4"
-										data-type="pasta"
+										data-type="rice"
 									>
 										<a href="#" class="pos-product">
 											<div
@@ -498,7 +498,7 @@
 									</div>
 									<div
 										class="col-xxl-3 col-xl-4 col-lg-6 col-md-4 col-sm-6 pb-4"
-										data-type="pasta"
+										data-type="rice"
 									>
 										<a href="#" class="pos-product">
 											<div
